[package]
name = "the_gate"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28.1"
egui = "0.28.1"
egui_plot = "0.28.1"
sysinfo = "0.30.5"

walkdir = "2.4.0"
humansize = "2.1.3"
chrono = "0.4.31"
trash = "3.1.2"
anyhow = "1.0.79"
parking_lot = "0.12.1" # For efficient mutexes
crossbeam-channel = "0.5.11" # For communication between scanner thread and UI
open = "5.3.3"

